tests/errors/surf_cls_05.experr
name 'undefinedthing' is not defined
